--- a/app/styles/filters.scss
+++ b/app/styles/filters.scss
@@ -3,7 +3,7 @@
 /* styling search bar */
 #search {
   color: white;
-  width: 220px;
+  width: 20px;
   font-size: 18px;
   padding: 5px;
   margin-left: 5px;
@@ -11,6 +11,7 @@
   outline: 0px;
   border: 0px;
   border-bottom: solid 1px $lightgrey;
+  opacity: 0.0;
 }
 
 #search:focus {
@@ -45,6 +46,7 @@
     text-align: center;
     border-radius: 20px;
     color: $base-color;
+    opacity: 0.0;
   }
 }
 
