--- a/app/styles/restaurants.scss
+++ b/app/styles/restaurants.scss
@@ -114,7 +114,7 @@
         line-height: 35px;
 
         img {
-          width: 35px;
+          width: 10.5%;
           margin: 2px;
           border-radius: 20px;
         }
@@ -122,9 +122,11 @@
       }
 
       .more-following {
+        width: 14%;
         display: inline-block;
         float: right;
-        padding-right: 5px;
+        text-align: right;
+        padding-right: 2px;
       }
 
     }
